--- a/03.本文を表示しよう/index.html
+++ b/03.本文を表示しよう/index.html
@@ -1,5 +1,5 @@
-HTMLは、ウェブページを作るための言語です。
+<p>HTMLは、ウェブページを作るための言語です。</p>
 
-タグを使ってテキストや画像を表示できます。
+<p>タグを使ってテキストや画像を表示できます。<br><br>
 
-ブラウザはタグを解釈して、ページを適切に表示します。
+ブラウザはタグを解釈して、ページを適切に表示します。</p>
