画像の表示

--- a/04.画像を表示させよう/index.html
+++ b/04.画像を表示させよう/index.html
@@ -1,1 +1,11 @@
 <!-- ここに画像を3つ追加してください -->
+ <img src="image/dolfin.png" alt="ペンギン">
+ 
+ <br><br><br><br><br>
+ <br><br><br><br><br><br><br><br><br><br>
+
+ <img src="image/panda.png" alt="パンダ" loading="lazy">
+ <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+ <img src="image/tiger.png" alt="トラ" loading="lazy">
+
+
